<resources>
    <string name="app_name">AnyTime</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_existing_account">Sign in to existing account</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="weak_password">Weak password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_web_client_id">70604723089-kck1jheco3037r6qr20b2ndf3k0p5ibm.apps.googleusercontent.com</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="focus">Focus</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="task">Task</string>
    <string name="categories">Categories</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_picture">profile picture</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="completed_tasks">Completed\ntasks</string>
    <string name="uncompleted_tasks">Uncompleted\ntasks</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="save">Save</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="add_task">add task</string>
    <string name="active_tasks">Active Tasks:</string>
    <string name="back">back</string>
    <string name="delete">Delete</string>
    <string name="add_category">+ Add Category</string>
    <string name="name">Name</string>
    <string name="no_priority">No priority</string>
    <string name="low_priority">Low priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="high_priority">High priority</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="focus_hint_pomodoro">Stay focused on your task</string>
    <string name="focus_hint_short_break">Take a short break</string>
    <string name="focus_hint_long_break">Take a long break</string>
    <string name="start">start</string>
    <string name="restart">restart</string>
    <string name="next">next</string>
    <string name="task_deleted">Task deleted</string>
    <string name="date">Date:</string>
    <string name="description">Description</string>
    <string name="category_name_empty_error_message">Category name cannot be empty</string>
    <string name="category_created_message">Category %s created</string>
    <string name="create_category_dialog_title">Create category</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="new_task">New task</string>
    <string name="editing_task">Editing task</string>
    <string name="task_saved">Task saved</string>
    <string name="error_try_again">Error, try again</string>
    <string name="timer_notification_content">Time remaining: %s</string>
    <string name="notification_timer_finished">Timer finished</string>
    <string name="timer_notification_channel_description">Channel for Timer Service</string>
    <string name="focus_count_of_breaks">%d/4</string>
    <string name="there_are_no_uncompleted_tasks">There are no uncompleted tasks</string>
    <string name="there_are_no_tasks">There are no tasks :(</string>
    <string name="sign_out_message">Do you really want to sign out of your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_last_message">You cannot delete all categories</string>
    <string name="error_empty">Cannot be empty</string>
    <string name="category_already_exists_error_message">A category with the same name already exists</string>

    <string-array name="priority_list">
        <item>All priority</item>
        <item>No priority</item>
        <item>Low priority</item>
        <item>Medium priority</item>
        <item>High priority</item>
    </string-array>

</resources>