<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.categories.CategoriesFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:text="@string/categories"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/addCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesRecyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>