<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <ProgressBar
        android:id="@+id/imageLoadingBar"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage" />

    <TextView
        android:id="@+id/imageText"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        android:text="@string/tap_to_change"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/edit"
        android:textAlignment="textStart"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/usernameLayout"
        app:layout_constraintStart_toStartOf="@id/usernameLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage">

        <androidx.cardview.widget.CardView
            android:id="@+id/completedCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    tools:text="14" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/completed_tasks"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/uncompletedCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    tools:text="88" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/uncompleted_tasks"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/buttonManageCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/manage_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLayout" />


    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>