<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.focus.FocusFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pomodoro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/timeCard"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="40dp"
        app:cardBackgroundColor="#EA8383"
        app:cardCornerRadius="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            tools:text="25:00" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:alpha="0.7"
        android:text="@string/stay_focused_on_your_task"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/playButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="40dp"
        app:cardBackgroundColor="#EA8383"
        app:cardCornerRadius="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint">

        <ImageView
            android:id="@+id/iconPlay"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/start"
            android:src="@drawable/ic_play" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/restartButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-10dp"
        app:cardBackgroundColor="#D8D8D8"
        app:cardCornerRadius="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/iconRestart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/restart"
            android:src="@drawable/ic_restart" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-10dp"
        app:cardBackgroundColor="#D8D8D8"
        app:cardCornerRadius="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/restartButton"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/iconNext"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>